--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.redborder</groupId>
-    <artifactId>test-siddhi</artifactId>
+
+    <groupId>pfg</groupId>
+    <artifactId>PFG_CorrelationService</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <repositories>
@@ -138,7 +139,7 @@
                     <appendAssemblyId>false</appendAssemblyId>
                     <archive>
                         <manifest>
-                            <mainClass>pfg.Test</mainClass>
+                            <mainClass>pfg.CorrelationService</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
